css/main.css
/*! HTML5 Boilerplate v5.0 | MIT License | http://h5bp.com/ */

html {
    color: #222;
    font-size: 1em;
    line-height: 1.4;
}

::-moz-selection {
    background: #1B3D0D;
    color: white;
    text-shadow: none;
}

::selection {
    background: #70ad47;
    color: #1B3D0D;
    text-shadow: none;
}

hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid #ccc;
    margin: 1em 0;
    padding: 0;
}

audio,
canvas,
iframe,
img,
svg,
video {
    vertical-align: middle;
}

fieldset {
    border: 0;
    margin: 0;
    padding: 0;
}

textarea {
    resize: vertical;
}

.browserupgrade {
    margin: 0.2em 0;
    background: #ccc;
    color: #000;
    padding: 0.2em 0;
}


/* ===== Initializr Styles ==================================================
   Author: Jonathan Verrecchia - verekia.com/initializr/responsive-template
   ========================================================================== */

body {
    font: 16px/26px Helvetica, Helvetica Neue, Arial;
}

.wrapper {
    width: 90%;
    margin: 0 5%;
}

/* ===================
    ALL: Orange Theme
   =================== */

.header-container {
    /*border-bottom: 20px solid #e44d26;*/
    border-bottom: 20px solid #547e30; /*#70ad47;*/
}

.footer-container,
.main aside {
    /* border-top: 20px solid #e44d26; */
    border-top: 20px solid #547e30; /*#70ad47;*/
}

.header-container,
.footer-container,
.main aside {
    /*background: #f16529;*/
    background: #70ad47;
}

.title {
    color: white;
}

/* ==============
    MOBILE: Menu
   ============== */


/* ==============
    MOBILE: Main
   ============== */

.main {
    padding: 30px 0;
}

.main article h1 {
    font-size: 2em;
}

.main aside {
    color: white;
    padding: 0px 5% 10px;
}

.footer-container footer {
    color: white;
    padding: 20px 0;
}

/* ===============
    ALL: IE Fixes
   =============== */

.ie7 .title {
    padding-top: 20px;
}

/* ==========================================================================
   Author's custom styles
   ========================================================================== */

body {
    font-family: 'Montserrat', sans-serif;
    line-height: 1.8;
}

.main-container p {
    text-align: justify;
}

h1.title {
    font-family: 'Libre Franklin', sans-serif;
    text-align: center;
    line-height: 1.2;
    margin: 0;
    font-size: 2em;
}


h3 {
    color: #1B3D0D;
    font-family: 'Libre Franklin', sans-serif;
    font-size: 1em;
}

#subtitle, #theDate {
    font-family: 'Libre Franklin', sans-serif;
    color: white;
    font-size: 1em;
    text-align: center;
    line-height: 1;
    margin: 1em 0;
}

@media only screen and (max-width: 479px) {
    .main aside h3 {
        margin: 0;
    }


    .main aside {
        text-align: center;
    }
}

@media only screen and (min-width: 768px) {
    .main aside h3 {
        margin: 0;
    }


    .main aside {
        padding: 1em;
        margin: 0em 2em 1em;
    }
}

@media only screen and (max-width: 1139px) {
    body {
        font-size: .8em;
        line-height: 1.4em;
    }

    .main aside h3 {
        padding-top: 1em;
    }
}

@media only screen and (min-width: 1140px) {
    h1.title {
        font-size: 3.5em;
        text-align: justify;
        text-align-last: justify;
    }

    #subtitle, #theDate {
        font-size: 2em;
    }

    h3 {
        font-size: 1.7em;
    }
}

.header-container {
    background: rgba(113, 171, 72, .5);
    background: url(../img/city.png);
    border-bottom-color: #0e1706;
}

.header-container,
.footer-container,
.main aside {
/*    background: white;*/
}

a {
    color: #49ad24;
}

div.speakers {
    width: 100%;
    text-align: justify;
    text-align-last: justify;
}

div.speakers * {
    text-align-last: auto;
}

div.speaker {
    display: inline-block;
}

div.speaker img {
    width: 150px;
    border-radius:100%;
    padding: 0 30px;
}

div.speakername {
    text-align: center;
    padding: .5em 0;
}

div.speaker .biography {
    display: none;
}

/* expanded speaker */
#speakerhighlight {
    /*border: 3px solid #70ad47;*/
    display:none;
    background-color: rgba(112, 173, 71, 0.1);
    padding: 1em;
    margin: 0;
    margin-top: 1em;
}

div.speaker {
    padding: 1em;
    border: 3px solid rgba(255, 255, 255, 0);
    transition: background-color 400ms;

    cursor: pointer;
}

#speakerhighlight .content div.speaker {
    background: none;
    cursor: auto;
}

div.speaker:hover {
    background-color: rgba(112, 173, 71, 0.05);
}

div.downbutton, div.upbutton {
    /*float: right;*/
    /*border: 1px solid rgba(112, 173, 71, 1);*/
    color: rgba(112, 173, 71, .3);
    /*border-radius: 100%;*/
    width: 100%;
    height: 1em;
    text-align: center;
}

.expanded div.downbutton, #speakerhighlight .upbutton {
    color: rgba(112, 173, 71, .6);
    transition: 400ms;
    /*background: rgba(112, 173, 71, .5);*/
}

div.speaker.expanded, div.speaker.expanded:hover {
    /*border: 3px solid #70ad47;*/
    background-color: rgba(112, 173, 71, 0.1);
    transition: background-color 400ms;
}

#speakerhighlight div.content {
    padding: 1em;
}

#speakerhighlight .content div.speaker .portrait {
    float:left;
    display: block;
    padding-right: 3em;
    padding-bottom: 3em;

    display: none;
}

#speakerhighlight div.speaker .biography {
    display: block;
}
/* close expanded speaker */

aside input, aside button {
    color: black;
}

.main aside {
    border-top: 0;
}

#map {
    float: right;
    margin-left: 1em;
}

#map iframe {
    width: 425px;
}

@media only screen and (max-width: 767px) {
    #map {
        float: none;
        text-align: center;
    }

    #map iframe {
        width: 95%;
        margin: auto 0;
    }
}

a.anchor {
    position: relative;
    top: -2em;
}

/* ==========================================================================
   Media Queries
   ========================================================================== */

@media only screen and (min-width: 480px) {

/* ========================
    INTERMEDIATE: IE Fixes
   ======================== */
}

@media only screen and (min-width: 768px) {

/* ====================
    WIDE: CSS3 Effects
   ==================== */

    .header-container,
    .main aside {
        -webkit-box-shadow: 0 5px 10px #aaa;
           -moz-box-shadow: 0 5px 10px #aaa;
                box-shadow: 0 5px 10px #aaa;
    }

/* ============
    WIDE: Menu
   ============ */

    .title {
        float: left;
    }

/* ============
    WIDE: Main
   ============ */

    .main article {
        float: left;
        width: 57%;
    }

    .main aside {
        float: right;
        width: 28%;
    }
}

@media only screen and (min-width: 1140px) {

/* ===============
    Maximal Width
   =============== */

    .wrapper {
        width: 1026px; /* 1140px - 10% for margins */
        margin: 0 auto;
    }
}

/* ==========================================================================
   Helper classes
   ========================================================================== */

.hidden {
    display: none !important;
    visibility: hidden;
}

.visuallyhidden {
    border: 0;
    clip: rect(0 0 0 0);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px;
}

.visuallyhidden.focusable:active,
.visuallyhidden.focusable:focus {
    clip: auto;
    height: auto;
    margin: 0;
    overflow: visible;
    position: static;
    width: auto;
}

.invisible {
    visibility: hidden;
}

.clearfix:before,
.clearfix:after {
    content: " ";
    display: table;
}

.clearfix:after {
    clear: both;
}

.clearfix {
    *zoom: 1;
}

/* ==========================================================================
   Print styles
   ========================================================================== */

@media print {
    *,
    *:before,
    *:after {
        background: transparent !important;
        color: #000 !important;
        box-shadow: none !important;
        text-shadow: none !important;
    }

    a,
    a:visited {
        text-decoration: underline;
    }

    a[href]:after {
        content: " (" attr(href) ")";
    }

    abbr[title]:after {
        content: " (" attr(title) ")";
    }

    a[href^="#"]:after,
    a[href^="javascript:"]:after {
        content: "";
    }

    pre,
    blockquote {
        border: 1px solid #999;
        page-break-inside: avoid;
    }

    thead {
        display: table-header-group;
    }

    tr,
    img {
        page-break-inside: avoid;
    }

    img {
        max-width: 100% !important;
    }

    p,
    h2,
    h3 {
        orphans: 3;
        widows: 3;
    }

    h2,
    h3 {
        page-break-after: avoid;
    }
}

